[gd_scene load_steps=6 format=3 uid="uid://2ga4van48oon"]

[ext_resource type="Script" path="res://scene/game.gd" id="1_apb1l"]
[ext_resource type="Texture2D" uid="uid://dn56lt3lfinin" path="res://assest/main.png" id="1_unuxf"]
[ext_resource type="Texture2D" uid="uid://nr13v0aj7i5b" path="res://assest/local  green.png" id="3_hybwf"]
[ext_resource type="Texture2D" uid="uid://c25iepmt4vnrw" path="res://assest/online grean.jpg" id="3_m8y50"]
[ext_resource type="Texture2D" uid="uid://otrdrwari4v4" path="res://assest/black..png" id="5_w6usf"]

[node name="game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_apb1l")

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(575.001, 324)
scale = Vector2(1.12695, 1.125)
texture = ExtResource("1_unuxf")

[node name="online" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 580.0
offset_top = 379.0
offset_right = 797.0
offset_bottom = 474.0
texture_pressed = ExtResource("3_m8y50")
stretch_mode = 0

[node name="local" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 341.0
offset_top = 380.0
offset_right = 583.0
offset_bottom = 480.0
texture_pressed = ExtResource("3_hybwf")

[node name="mic" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 333.0
offset_top = 556.0
offset_right = 390.0
offset_bottom = 615.0

[node name="black" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -147.0
offset_top = -81.0
offset_right = 165.0
offset_bottom = 34.0
texture = ExtResource("5_w6usf")

[node name="coming soon" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 776.0
offset_top = 566.0
offset_right = 816.0
offset_bottom = 606.0

[node name="coming soon2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 589.0
offset_top = 482.0
offset_right = 783.0
offset_bottom = 536.0

[node name="coming soon4" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 361.0
offset_top = 483.0
offset_right = 555.0
offset_bottom = 537.0

[node name="coming soon3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 332.0
offset_top = 561.0
offset_right = 385.0
offset_bottom = 615.0

[node name="staticts" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 667.0
offset_top = 566.0
offset_right = 707.0
offset_bottom = 606.0

[node name="TextureButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 442.0
offset_top = 562.0
offset_right = 495.0
offset_bottom = 618.0

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 550.0
offset_top = 564.0
offset_right = 602.0
offset_bottom = 618.0

[connection signal="pressed" from="online" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="local" to="." method="_on_local_pressed"]
[connection signal="pressed" from="coming soon" to="." method="_on_coming_soon_pressed"]
[connection signal="pressed" from="coming soon2" to="." method="_on_coming_soon_2_pressed"]
[connection signal="pressed" from="coming soon4" to="." method="_on_coming_soon_2_pressed"]
[connection signal="pressed" from="coming soon3" to="." method="_on_coming_soon_2_pressed"]
[connection signal="pressed" from="staticts" to="." method="_on_staticts_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed2"]
